select-city-dropdown-alignment-issue-fixed

--- a/client/src/Components/CategoryPage/CategoryPage.css
+++ b/client/src/Components/CategoryPage/CategoryPage.css
@@ -81,9 +81,7 @@ form {
   margin-left: -44px;
   height: 48px;
 }
-.collapse {
-  top: "-40px",
-}
+
 
 .ProductListSec .Prod {
   height: auto;
